--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,9 +33,18 @@ include_directories(Glitter/Headers/
                     Glitter/Vendor/glad/include/
                     Glitter/Vendor/glfw/include/
                     Glitter/Vendor/glm/
-                    Glitter/Vendor/stb/)
+                    Glitter/Vendor/stb/
+                    Glitter/Vendor/imgui/
+                    Glitter/Vendor/imgui/backends/)
 
-file(GLOB VENDORS_SOURCES Glitter/Vendor/glad/src/glad.c)
+file(GLOB VENDORS_SOURCES Glitter/Vendor/glad/src/glad.c
+                        Glitter/Vendor/imgui/imgui.cpp
+                        Glitter/Vendor/imgui/imgui_demo.cpp
+                        Glitter/Vendor/imgui/imgui_draw.cpp
+                        Glitter/Vendor/imgui/imgui_tables.cpp
+                        Glitter/Vendor/imgui/imgui_widgets.cpp
+                        Glitter/Vendor/imgui/backends/imgui_impl_glfw.cpp
+                        Glitter/Vendor/imgui/backends/imgui_impl_opengl3.cpp)
 file(GLOB PROJECT_HEADERS Glitter/Headers/*.hpp)
 file(GLOB PROJECT_SOURCES Glitter/Sources/*.cpp)
 file(GLOB PROJECT_SHADERS Glitter/Shaders/*.comp
